--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -75,6 +75,16 @@ body {
     text-align:right;
     padding-right:15px;
 }
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar{
+    border:1px solid #61122f;
+}
+
+.navbar-header button.navbar-toggle{
+    clear:both;
+    margin-top:-30px;
+}
+
 /*large*/
 @media (min-width: 1200px){
 
@@ -82,7 +92,12 @@ body {
 
 /*medium*/
 @media (min-width: 992px) and (max-width: 1199px){
-
+    #logo-img{
+        background: url('../images/restaurant-logo_medium.png') no-repeat;
+	    width:100px;
+	    height:100px;
+	    margin:5px 5px 5px 0;
+    }
 }
 
 /*small*/
@@ -90,7 +105,24 @@ body {
 	
 }
 
-/**/
-@media (min-width: 767px){
-	
+/*extra small*/
+@media (max-width: 767px){
+	.navbar-brand{
+        padding-top:10px;
+        height:80px;
+	}
+    
+    .navbar-brand h1{
+        padding-top:10px;
+        font-size:5vw;
+    }
+    .navbar-brand p{
+        text-transform:uppercase;
+        font-size:.6em;
+        margin-top:12px;
+    }
+    .navbar-brand p img{
+        height:20px;
+
+    }
 }
