--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -84,12 +84,48 @@ body {
     clear:both;
     margin-top:-30px;
 }
-
+/* HOME PAGE */
 .container .jumbotron{
      box-shadow:0 0 50px #3F0C1F;
         border:2px solid #3F0C1F;
 }
 
+#menu-tile, #specials-tile,#map-tile{
+  height:250px;
+  width:100%;
+  margin-bottom: 15px;
+  position: relative;
+  border:2px solid #3F0C1F;
+  overflow:hidden;
+}
+#menu-tile:hover, #specials-tile:hover,#map-tile:hover{
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-tile{
+  background: url('../images/menu-tile.jpg') no-repeat;
+  background-position;
+}
+#specials-tile{
+  background: url('../images/specials-tile.jpg') no-repeat;
+    background-position;
+}
+
+#menu-tile span, #specials-tile span,#map-tile span{
+  position:absolute;
+  right:0;
+  bottom:0;
+  width:100%;
+  text-align: center;
+  font-size:1.6em;
+  text-transform: uppercase;
+  background-color: #000;
+  color:#fff;
+  opacity:.8;
+}
+
+
+/*END HOME PAGE*/
 /*large*/
 @media (min-width: 1200px){
    .container .jumbotron{
@@ -171,5 +207,9 @@ body {
         margin-top:30px;
            padding:0;
        
+    }
+    #menu-tile,#specials-tile{
+      width:360px;
+      margin:0 auto 15px;
     }
 }
