--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -215,8 +215,12 @@ body {
 
 /*super small*/
 @media(max-width: 479px){
+  .narbar-brand h1{
+    padding-top: 5px;
+    font-size: 6vw;
+  }
   #menu-tile,#specials-tile{
-    width:280px;
+    width:290px;
     margin:0 auto 15px;
   }
 }
