--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -84,6 +84,37 @@ body {
     clear:both;
     margin-top:-30px;
 }
+/*footer*/
+.panel-footer{
+  margin-top:30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222; 
+  border-top:0;
+  color:pink;
+}
+
+.panel-footer div.row{
+  margin-bottom:35px;
+}
+#hours,#address{
+  line-height: 2;
+}
+#hours>span,#address>span{
+  font-size:1.3em;
+}
+#address p{
+  color:#557c3e;
+  font-size: .8em;
+  line-height: 1.8;
+}
+#testimonials{
+  font-style:italic;
+}
+#testmonials p:nth-child(2){
+  margin-top:25px;
+}
+/*end footer*/
 /* HOME PAGE */
 .container .jumbotron{
      box-shadow:0 0 50px #3F0C1F;
@@ -201,6 +232,18 @@ body {
         font-size: .7em;
         letter-spacing: .1em;
         text-transform: uppercase;
+     }
+
+     .panel-footer section{
+       margin-bottom:30px;
+       text-align: center;
+     }
+     .panel-footer section:nth-child(3){
+       margin-bottom: 0;
+     }
+
+     .panel-footer section hr{
+       width:50%;
      }
 
     .container .jumbotron{
